revise overview from sam's comments

--- a/numila/analysis.ipynb
+++ b/numila/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -16,20 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/fred/anaconda/lib/python3.5/site-packages/sklearn/utils/fixes.py:64: DeprecationWarning: inspect.getargspec() is deprecated, use inspect.signature() instead\n",
-      "  if 'order' in inspect.getargspec(np.copy)[0]:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -40,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -80,18 +71,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "trained on 1000 utterances\n",
+      "train time : 12.346 seconds\n",
+      "num nodes:  2175\n"
+     ]
+    }
+   ],
    "source": [
     "params = {'DECAY_RATE': .0001,\n",
     "          'FTP_PREFERENCE': 0.5,\n",
-    "          'CHUNK_THRESHOLD': 0.3}\n",
+    "          'CHUNK_THRESHOLD': 0.1}\n",
     "corpus = syl_corpus()\n",
     "model, history = train(corpus,\n",
-    "                       utterances=10000,\n",
+    "                       utterances=1000,\n",
     "                       track=track,\n",
     "                       sample_rate=100,\n",
     "                       model_params=params,\n",
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -111,16 +112,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(# | yu | [[wa nx] gEt] | In | #)\n",
-      "(# | If | Y | pUt | yu | In | yu | wont | lYk | [It #])\n",
-      "(# | yu | [wa nx] | go | In | dont | yu | #)\n",
-      "(# | yu | [wa nx] | go | In | #)\n",
-      "(# | [h^ #])\n",
-      "(# | [brU klIn] | #)\n",
-      "(# | gEt | [dWn #])\n",
-      "(# | yEs | #)\n",
-      "(# | go | [x we] | #)\n",
-      "([# yu] | tEl | mi | tu | go | [x we] | #)\n"
+      "([[# hY] #])\n",
+      "([# no] | [[[[ma mi] Iz] nat] pI] | kIG | yu | ^p | #)\n",
+      "([[[# yu] [h@v tu]] [it fRst]] | DEn | [[[ma mi] wIl] pIk] | yu | ^p | #)\n",
+      "([[[# Der] [yu go]] #])\n",
+      "(# | [ri x] | li | #)\n",
+      "(# | wW | #)\n",
+      "(# | [[x n^] DR] | bYt | #)\n",
+      "([[# yR] #])\n",
+      "(# | xm | mor | #)\n",
+      "([# Y] | se | D@ts | #)\n"
      ]
     }
    ],
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -142,35 +143,35 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ADULT: xm hxm\n",
-      "MODEL: [xm hxm]\n",
+      "ADULT: Der wi go\n",
+      "MODEL: [Der [wi go]]\n",
       "\n",
-      "ADULT: yu yur nat e sR kxs pR fcr mR\n",
-      "'kxs is not in the graph.'\n",
+      "ADULT: dont h@v m^C vOs lEft mcr gi\n",
+      "MODEL: [[lEft [mcr gi]] [[dont h@v] [m^C vOs]]]\n",
       "\n",
-      "ADULT: yu k@nt wck x lcG D^ re lIG\n",
-      "MODEL: [[[yu k@nt] [wck x]] [[D^ lcG] [re lIG]]]\n",
+      "ADULT: Its J^st cl gcn x we\n",
+      "'gcn is not in the graph.'\n",
       "\n",
-      "ADULT: o lUk @t D@t\n",
-      "MODEL: [[lUk @t] [o D@t]]\n",
+      "ADULT: hir yu go\n",
+      "MODEL: [hir [yu go]]\n",
       "\n",
-      "ADULT: yEs\n",
-      "MODEL: yEs\n",
+      "ADULT: mor gIn\n",
+      "MODEL: [mor gIn]\n",
       "\n",
-      "ADULT: du IG D@t spI tIG TIG x gEn\n",
-      "MODEL: [[TIG [x gEn]] [[spI tIG] [[du IG] D@t]]]\n",
+      "ADULT: Der wi go\n",
+      "MODEL: [Der [wi go]]\n",
       "\n",
-      "ADULT: so yu g^ nx go tu D^ dor bY yUr sElf h^\n",
-      "MODEL: [[[[g^ nx] go] [bY [yUr sElf]]] [[tu h^] [[so yu] [D^ dor]]]]\n",
+      "ADULT: D@ts e lI txl bE tR\n",
+      "MODEL: [[bE tR] [[D@ts e] [lI txl]]]\n",
       "\n",
-      "ADULT: o ke\n",
-      "MODEL: [o ke]\n",
+      "ADULT: Der wi go\n",
+      "MODEL: [Der [wi go]]\n",
       "\n",
-      "ADULT: o ke\n",
-      "MODEL: [o ke]\n",
+      "ADULT: Der wi go lI txl gRl\n",
+      "MODEL: [[[lI txl] gRl] [Der [wi go]]]\n",
       "\n",
-      "ADULT: o hE lo\n",
-      "MODEL: [o [hE lo]]\n"
+      "ADULT: y^ mi\n",
+      "MODEL: [y^ mi]\n"
      ]
     }
    ],
