--- a/notebooks/Master.ipynb
+++ b/notebooks/Master.ipynb
@@ -81,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Production accuracy\n",
+    "# Production accuracy\n",
     "\n",
     "Numila slightly outperforms a trigram and bigram model on the BLEU utterance ordering task. The advantage disappears when `EXEMPLAR_THRESHOLD` is set to 1 (preventing any chunks from being stored in the graph)."
    ]
@@ -1191,7 +1191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Grammaticality judgement\n",
+    "# Grammaticality judgement\n",
     "\n",
     "Numila can provide a grammaticality score for any utterance. The score comes in two parts:\n",
     "\n",
@@ -5486,13 +5486,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>chunk_ratio</th>\n",
+       "      <th>chunkedness</th>\n",
+       "      <th>length</th>\n",
+       "      <th>utterance_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.323174</td>\n",
+       "      <td>4</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.457591</td>\n",
+       "      <td>4</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.247263</td>\n",
+       "      <td>7</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.400000</td>\n",
+       "      <td>0.477523</td>\n",
+       "      <td>6</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   chunk_ratio  chunkedness  length utterance_type\n",
+       "0     0.666667     0.323174       4         normal\n",
+       "1     0.333333     0.457591       4         normal\n",
+       "2     0.500000     0.247263       7         normal\n",
+       "3     0.400000     0.477523       6         normal\n",
+       "4     0.000000          NaN       4         normal"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "TODO"
+    "grammaticality.head()"
    ]
   },
   {
