--- a/writing/diagrams/graph.tex
+++ b/writing/diagrams/graph.tex
@@ -54,7 +54,7 @@
 
 
 \end{tikzpicture}
-\label{graph}
+\label{fig:graph}
 \caption{A simplified graph representing the utterance ``the big dog ate my steak''.
          For display, FTP and BTP edges are represented as a single undirected edge.}
 \end{figure}
