starting on final

--- a/writing/diagrams/graph.tex
+++ b/writing/diagrams/graph.tex
@@ -55,6 +55,9 @@
 
 \end{tikzpicture}
 \label{fig:graph}
-\caption{A simplified graph representing the utterance ``the big dog ate my steak''.
-         For display, FTP and BTP edges are represented as a single undirected edge.}
+\caption{A simplified graph representing the utterance `the big dog ate my steak'.
+         For display, FTP and BTP edges are represented as a single undirected edge.
+         Hierarchical structure is distinctive in this image; however, when
+         the model is run in flat mode, the two nodes in the top left would be collapsed
+         into a single node.}
 \end{figure}
